[OCW][Stanford]CS143_Compilers/ProgrammingAssignment/PA3_Parser/cool.output
Terminals which are not used

   ERROR


State 143 conflicts: 9 shift/reduce
State 156 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list_semicolon_plus

    2 class_list_semicolon_plus: class ';'
    3                          | class_list_semicolon_plus class ';'

    4 class: CLASS TYPEID '{' '}'
    5      | CLASS TYPEID '{' feature_list_semicolon_plus '}'
    6      | CLASS TYPEID INHERITS TYPEID '{' '}'
    7      | CLASS TYPEID INHERITS TYPEID '{' feature_list_semicolon_plus '}'
    8      | error

    9 feature_list_semicolon_plus: feature ';'
   10                            | feature_list_semicolon_plus feature ';'

   11 feature: OBJECTID '(' ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID '(' formal_list_comma_plus ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID ':' TYPEID ASSIGN expression
   14        | OBJECTID ':' TYPEID
   15        | error

   16 formal_list_comma_plus: formal
   17                       | formal_list_comma_plus ',' formal

   18 formal: OBJECTID ':' TYPEID

   19 expression_list_comma_plus: expression
   20                           | expression_list_comma_plus ',' expression
   21                           | expression_list_comma_plus ',' error

   22 expression_list_semicolon_plus: expression ';'
   23                               | expression_list_semicolon_plus expression ';'
   24                               | expression_list_semicolon_plus error ';'

   25 expression: OBJECTID ASSIGN expression
   26           | expression '@' TYPEID '.' OBJECTID '(' ')'
   27           | expression '@' TYPEID '.' OBJECTID '(' expression_list_comma_plus ')'
   28           | expression '.' OBJECTID '(' ')'
   29           | expression '.' OBJECTID '(' expression_list_comma_plus ')'
   30           | OBJECTID '(' ')'
   31           | OBJECTID '(' error ')'
   32           | OBJECTID '(' expression_list_comma_plus ')'
   33           | IF expression THEN expression ELSE expression FI
   34           | WHILE expression LOOP expression POOL
   35           | '{' expression_list_semicolon_plus '}'
   36           | LET let_body
   37           | CASE expression OF case_list ESAC
   38           | NEW TYPEID
   39           | ISVOID expression
   40           | expression '+' expression
   41           | expression '-' expression
   42           | expression '*' expression
   43           | expression '/' expression
   44           | '~' expression
   45           | expression '<' expression
   46           | expression LE expression
   47           | expression '=' expression
   48           | NOT expression
   49           | '(' expression ')'
   50           | OBJECTID
   51           | INT_CONST
   52           | STR_CONST
   53           | BOOL_CONST

   54 let_body: OBJECTID ':' TYPEID IN expression
   55         | OBJECTID ':' TYPEID ASSIGN expression IN expression
   56         | OBJECTID ':' TYPEID ',' let_body
   57         | OBJECTID ':' TYPEID ASSIGN expression ',' let_body
   58         | error ',' let_body

   59 case_list: case ';'
   60          | case_list case ';'

   61 case: OBJECTID ':' TYPEID DARROW expression
   62     | error


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 12 26 27 28 29 30 31 32 49
')' (41) 11 12 26 27 28 29 30 31 32 49
'*' (42) 42
'+' (43) 40
',' (44) 17 20 21 56 57 58
'-' (45) 41
'.' (46) 26 27 28 29
'/' (47) 43
':' (58) 11 12 13 14 18 54 55 56 57 61
';' (59) 2 3 9 10 22 23 24 59 60
'<' (60) 45
'=' (61) 47
'@' (64) 26 27
'{' (123) 4 5 6 7 11 12 35
'}' (125) 4 5 6 7 11 12 35
'~' (126) 44
error (256) 8 15 21 24 31 58 62
CLASS (258) 4 5 6 7
ELSE (259) 33
FI (260) 33
IF (261) 33
IN (262) 54 55
INHERITS (263) 6 7
LET (264) 36
LOOP (265) 34
POOL (266) 34
THEN (267) 33
WHILE (268) 34
CASE (269) 37
ESAC (270) 37
OF (271) 37
DARROW (272) 61
NEW (273) 38
ISVOID (274) 39
STR_CONST (275) 52
INT_CONST (276) 51
BOOL_CONST (277) 53
TYPEID (278) 4 5 6 7 11 12 13 14 18 26 27 38 54 55 56 57 61
OBJECTID (279) 11 12 13 14 18 25 26 27 28 29 30 31 32 50 54 55 56 57
    61
ASSIGN (280) 13 25 55 57
NOT (281) 48
LE (282) 46
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list_semicolon_plus (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6 7 8, on right: 2 3
feature_list_semicolon_plus (49)
    on left: 9 10, on right: 5 7 10
feature (50)
    on left: 11 12 13 14 15, on right: 9 10
formal_list_comma_plus (51)
    on left: 16 17, on right: 12 17
formal (52)
    on left: 18, on right: 16 17
expression_list_comma_plus (53)
    on left: 19 20 21, on right: 20 21 27 29 32
expression_list_semicolon_plus (54)
    on left: 22 23 24, on right: 23 24 35
expression (55)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
    43 44 45 46 47 48 49 50 51 52 53, on right: 11 12 13 19 20 22 23
    25 26 27 28 29 33 34 37 39 40 41 42 43 44 45 46 47 48 49 54 55
    57 61
let_body (56)
    on left: 54 55 56 57 58, on right: 36 56 57 58
case_list (57)
    on left: 59 60, on right: 37 60
case (58)
    on left: 61 62, on right: 59 60


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program                    go to state 3
    class_list_semicolon_plus  go to state 4
    class                      go to state 5


state 1

    8 class: error .

    $default  reduce using rule 8 (class)


state 2

    4 class: CLASS . TYPEID '{' '}'
    5      | CLASS . TYPEID '{' feature_list_semicolon_plus '}'
    6      | CLASS . TYPEID INHERITS TYPEID '{' '}'
    7      | CLASS . TYPEID INHERITS TYPEID '{' feature_list_semicolon_plus '}'

    TYPEID  shift, and go to state 6


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    1 program: class_list_semicolon_plus .
    3 class_list_semicolon_plus: class_list_semicolon_plus . class ';'

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


state 5

    2 class_list_semicolon_plus: class . ';'

    ';'  shift, and go to state 9


state 6

    4 class: CLASS TYPEID . '{' '}'
    5      | CLASS TYPEID . '{' feature_list_semicolon_plus '}'
    6      | CLASS TYPEID . INHERITS TYPEID '{' '}'
    7      | CLASS TYPEID . INHERITS TYPEID '{' feature_list_semicolon_plus '}'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


state 7

    0 $accept: program $end .

    $default  accept


state 8

    3 class_list_semicolon_plus: class_list_semicolon_plus class . ';'

    ';'  shift, and go to state 12


state 9

    2 class_list_semicolon_plus: class ';' .

    $default  reduce using rule 2 (class_list_semicolon_plus)


state 10

    6 class: CLASS TYPEID INHERITS . TYPEID '{' '}'
    7      | CLASS TYPEID INHERITS . TYPEID '{' feature_list_semicolon_plus '}'

    TYPEID  shift, and go to state 13


state 11

    4 class: CLASS TYPEID '{' . '}'
    5      | CLASS TYPEID '{' . feature_list_semicolon_plus '}'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 16

    feature_list_semicolon_plus  go to state 17
    feature                      go to state 18


state 12

    3 class_list_semicolon_plus: class_list_semicolon_plus class ';' .

    $default  reduce using rule 3 (class_list_semicolon_plus)


state 13

    6 class: CLASS TYPEID INHERITS TYPEID . '{' '}'
    7      | CLASS TYPEID INHERITS TYPEID . '{' feature_list_semicolon_plus '}'

    '{'  shift, and go to state 19


state 14

   15 feature: error .

    $default  reduce using rule 15 (feature)


state 15

   11 feature: OBJECTID . '(' ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID . '(' formal_list_comma_plus ')' ':' TYPEID '{' expression '}'
   13        | OBJECTID . ':' TYPEID ASSIGN expression
   14        | OBJECTID . ':' TYPEID

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


state 16

    4 class: CLASS TYPEID '{' '}' .

    $default  reduce using rule 4 (class)


state 17

    5 class: CLASS TYPEID '{' feature_list_semicolon_plus . '}'
   10 feature_list_semicolon_plus: feature_list_semicolon_plus . feature ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 22

    feature  go to state 23


state 18

    9 feature_list_semicolon_plus: feature . ';'

    ';'  shift, and go to state 24


state 19

    6 class: CLASS TYPEID INHERITS TYPEID '{' . '}'
    7      | CLASS TYPEID INHERITS TYPEID '{' . feature_list_semicolon_plus '}'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 25

    feature_list_semicolon_plus  go to state 26
    feature                      go to state 18


state 20

   11 feature: OBJECTID '(' . ')' ':' TYPEID '{' expression '}'
   12        | OBJECTID '(' . formal_list_comma_plus ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 27
    ')'       shift, and go to state 28

    formal_list_comma_plus  go to state 29
    formal                  go to state 30


state 21

   13 feature: OBJECTID ':' . TYPEID ASSIGN expression
   14        | OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 31


state 22

    5 class: CLASS TYPEID '{' feature_list_semicolon_plus '}' .

    $default  reduce using rule 5 (class)


state 23

   10 feature_list_semicolon_plus: feature_list_semicolon_plus feature . ';'

    ';'  shift, and go to state 32


state 24

    9 feature_list_semicolon_plus: feature ';' .

    $default  reduce using rule 9 (feature_list_semicolon_plus)


state 25

    6 class: CLASS TYPEID INHERITS TYPEID '{' '}' .

    $default  reduce using rule 6 (class)


state 26

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list_semicolon_plus . '}'
   10 feature_list_semicolon_plus: feature_list_semicolon_plus . feature ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 33

    feature  go to state 23


state 27

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 34


state 28

   11 feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 35


state 29

   12 feature: OBJECTID '(' formal_list_comma_plus . ')' ':' TYPEID '{' expression '}'
   17 formal_list_comma_plus: formal_list_comma_plus . ',' formal

    ')'  shift, and go to state 36
    ','  shift, and go to state 37


state 30

   16 formal_list_comma_plus: formal .

    $default  reduce using rule 16 (formal_list_comma_plus)


state 31

   13 feature: OBJECTID ':' TYPEID . ASSIGN expression
   14        | OBJECTID ':' TYPEID .

    ASSIGN  shift, and go to state 38

    $default  reduce using rule 14 (feature)


state 32

   10 feature_list_semicolon_plus: feature_list_semicolon_plus feature ';' .

    $default  reduce using rule 10 (feature_list_semicolon_plus)


state 33

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list_semicolon_plus '}' .

    $default  reduce using rule 7 (class)


state 34

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 39


state 35

   11 feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 40


state 36

   12 feature: OBJECTID '(' formal_list_comma_plus ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 41


state 37

   17 formal_list_comma_plus: formal_list_comma_plus ',' . formal

    OBJECTID  shift, and go to state 27

    formal  go to state 42


state 38

   13 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 57


state 39

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


state 40

   11 feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 58


state 41

   12 feature: OBJECTID '(' formal_list_comma_plus ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 59


state 42

   17 formal_list_comma_plus: formal_list_comma_plus ',' formal .

    $default  reduce using rule 17 (formal_list_comma_plus)


state 43

   33 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 60


state 44

   36 expression: LET . let_body

    error     shift, and go to state 61
    OBJECTID  shift, and go to state 62

    let_body  go to state 63


state 45

   34 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 64


state 46

   37 expression: CASE . expression OF case_list ESAC

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 65


state 47

   38 expression: NEW . TYPEID

    TYPEID  shift, and go to state 66


state 48

   39 expression: ISVOID . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 67


state 49

   52 expression: STR_CONST .

    $default  reduce using rule 52 (expression)


state 50

   51 expression: INT_CONST .

    $default  reduce using rule 51 (expression)


state 51

   53 expression: BOOL_CONST .

    $default  reduce using rule 53 (expression)


state 52

   25 expression: OBJECTID . ASSIGN expression
   30           | OBJECTID . '(' ')'
   31           | OBJECTID . '(' error ')'
   32           | OBJECTID . '(' expression_list_comma_plus ')'
   50           | OBJECTID .

    ASSIGN  shift, and go to state 68
    '('     shift, and go to state 69

    $default  reduce using rule 50 (expression)


state 53

   48 expression: NOT . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 70


state 54

   44 expression: '~' . expression

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 71


state 55

   35 expression: '{' . expression_list_semicolon_plus '}'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression_list_semicolon_plus  go to state 72
    expression                      go to state 73


state 56

   49 expression: '(' . expression ')'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 74


state 57

   13 feature: OBJECTID ':' TYPEID ASSIGN expression .
   26 expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   27           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_plus ')'
   28           | expression . '.' OBJECTID '(' ')'
   29           | expression . '.' OBJECTID '(' expression_list_comma_plus ')'
   40           | expression . '+' expression
   41           | expression . '-' expression
   42           | expression . '*' expression
   43           | expression . '/' expression
   45           | expression . '<' expression
   46           | expression . LE expression
   47           | expression . '=' expression

    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 13 (feature)


state 58

   11 feature: OBJECTID '(' ')' ':' TYPEID '{' . expression '}'

    IF          shift, and go to state 43
    LET         shift, and go to state 44
    WHILE       shift, and go to state 45
    CASE        shift, and go to state 46
    NEW         shift, and go to state 47
    ISVOID      shift, and go to state 48
    STR_CONST   shift, and go to state 49
    INT_CONST   shift, and go to state 50
    BOOL_CONST  shift, and go to state 51
    OBJECTID    shift, and go to state 52
    NOT         shift, and go to state 53
    '~'         shift, and go to state 54
    '{'         shift, and go to state 55
    '('         shift, and go to state 56

    expression  go to state 84


state 59

   12 feature: OBJECTID '(' formal_list_comma_plus ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 85


state 60

   26 expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   27           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_plus ')'
   28           | expression . '.' OBJECTID '(' ')'
   29           | expression . '.' OBJECTID '(' expression_list_comma_plus ')'
   33           | IF expression . THEN expression ELSE expression FI
   40           | expression . '+' expression
   41           | expression . '-' expression
   42           | expression . '*' expression
   43           | expression . '/' expression
   45           | expression . '<' expression
   46           | expression . LE expression
   47           | expression . '=' expression

    THEN  shift, and go to state 86
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


state 61

   58 let_body: error . ',' let_body

    ','  shift, and go to state 87


state 62

   54 let_body: OBJECTID . ':' TYPEID IN expression
   55         | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   56         | OBJECTID . ':' TYPEID ',' let_body
   57         | OBJECTID . ':' TYPEID ASSIGN expression ',' let_body

    ':'  shift, and go to state 88


state 63

   36 expression: LET let_body .

    $default  reduce using rule 36 (expression)


state 64

   26 expression: expression . '@' TYPEID '.' OBJECTID '(' ')'
   27           | expression . '@' TYPEID '.' OBJECTID '(' expression_list_comma_plus ')'
   28           | expression . '.' OBJECTID '(' ')'
   29           | expression . '.' OBJECTID '(' expression_list_comma_plus ')'
   34           | WHILE expression . LOOP expression POOL
   40           | expression . '+' expression
   41           | expression . '-' expression
   42           | expression . '*' expression
   43           | expression . '/' expression
   45           | expression . '<' expression
   46           | expression . LE expression
   47           | expression . '=' expression

    LOOP  shift, and go to state 89
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


state 65
